// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`universal: dist 1`] = `
Array [
  "index.cjs",
  "index.d.ts",
  "index.js",
]
`;

exports[`universal: dist/index.cjs 1`] = `
var __defProp = Object.defineProperty;
var __markAsModule = (target) => __defProp(target, "__esModule", { value: true });
var __name = (target, value) => __defProp(target, "name", { value, configurable: true });
var __export = (target, all) => {
  __markAsModule(target);
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};

// src/index.ts
__export(exports, {
  isImportMetaObjectLike: () => isImportMetaObjectLike
});

// ../../node_modules/lodash-es/isObjectLike.js
function isObjectLike(value) {
  return value != null && typeof value == "object";
}
__name(isObjectLike, "isObjectLike");
var isObjectLike_default = isObjectLike;

// src/isImportMetaObjectLike.ts
var import_meta = {};
function isImportMetaObjectLike() {
  return isObjectLike_default(import_meta);
}
__name(isImportMetaObjectLike, "isImportMetaObjectLike");
// Annotate the CommonJS export names for ESM import in node:
0 && (module.exports = {
  isImportMetaObjectLike
});
/**
 * @license
 * Lodash (Custom Build) <https://lodash.com/>
 * Build: \`lodash modularize exports="es" -o ./\`
 * Copyright OpenJS Foundation and other contributors <https://openjsf.org/>
 * Released under MIT license <https://lodash.com/license>
 * Based on Underscore.js 1.8.3 <http://underscorejs.org/LICENSE>
 * Copyright Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
 */

`;

exports[`universal: dist/index.d.ts 1`] = `
declare function isImportMetaObjectLike(): boolean;

export { isImportMetaObjectLike };

`;

exports[`universal: dist/index.js 1`] = `
// ../../node_modules/lodash-es/isObjectLike.js
function isObjectLike(value) {
  return value != null && typeof value == "object";
}
var isObjectLike_default = isObjectLike;

// src/isImportMetaObjectLike.ts
function isImportMetaObjectLike() {
  return isObjectLike_default(import.meta);
}
export {
  isImportMetaObjectLike
};
/**
 * @license
 * Lodash (Custom Build) <https://lodash.com/>
 * Build: \`lodash modularize exports="es" -o ./\`
 * Copyright OpenJS Foundation and other contributors <https://openjsf.org/>
 * Released under MIT license <https://lodash.com/license>
 * Based on Underscore.js 1.8.3 <http://underscorejs.org/LICENSE>
 * Copyright Jeremy Ashkenas, DocumentCloud and Investigative Reporters & Editors
 */

`;

exports[`universal: logs 1`] = `
[STARTED] Resolving build manifests
[DATA] Checking 'action.yml'
[DATA] Checking 'package.json'
[SUCCESS] Resolving build manifests
[STARTED] Run preparations
[DATA] Removing 'dist' directory
[SUCCESS] Run preparations
[STARTED] Making bundle from 'package.json'
[STARTED] Parsing 'package.json'
[SUCCESS] Parsing 'package.json'
[STARTED] Making '.main' entry bundle
[DATA] Setting entry point: ./src/index
[DATA] Setting output file: ./dist/index.cjs
[SUCCESS] Making '.main' entry bundle
[STARTED] Making '.module' entry bundle
[DATA] Setting entry point: ./src/index
[DATA] Setting output file: ./dist/index.js
[DATA] Setting build target: chrome88, edge89, firefox78, safari14.1
[SUCCESS] Making '.module' entry bundle
[STARTED] Making 'types' entry bundle
[DATA] Generating 'd.ts' files
[DATA] Bundle into single 'd.ts' file
[SUCCESS] Making 'types' entry bundle
[SUCCESS] Making bundle from 'package.json'
`;
